#update
changed toolchain and compile target to properly use Java 17